fix overflow try 2

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,12 +17,14 @@ body {
   flex-direction: column;
   align-items: center;
 
-  max-width: 100vw;
-  overflow-x: hidden;
-
   @include media('>=large') {
     background-image: url(../images/bg-header-desktop.png);
   }
+}
+
+body, header, main, footer {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @include media('>xlarge') {
